[package]
name = "step_fit_rs"
version = "0.1.0"
authors = ["Tobias Klees <social@klunz.com>"]
edition = "2018"

license = "MIT OR Apache-2.0"#
description = "Small program to read out step data from Step-Fit Wristband synchronization log file"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
druid = "0.7"
